--- a/src/features/Apiexplorer/Dropdown/Dropdown.module.scss
+++ b/src/features/Apiexplorer/Dropdown/Dropdown.module.scss
@@ -51,7 +51,7 @@
 
     .dropdownSelect {
       padding: 0;
-      margin: 0.5rem;
+      margin: rem(0.5);
       color: var(--ifm-color-gray-300);
       font-size: rem(1.6);
     }
