feat: minor color changes

--- a/src/features/Endpoint/Endpoint.module.scss
+++ b/src/features/Endpoint/Endpoint.module.scss
@@ -110,7 +110,7 @@
       .urlLink {
         border-radius: 4px;
         padding: 0.2rem 0.4rem;
-        color: #c7254e; //var(--wine-01);
+        color: #d91d4c; //var(--wine-01);
         font-size: 90%;
         border: 1px solid #f0f1f3a3;
         font-weight: 400;
