perf: variable change

--- a/src/features/Endpoint/Endpoint.module.scss
+++ b/src/features/Endpoint/Endpoint.module.scss
@@ -112,7 +112,7 @@
         padding: 0.2rem 0.4rem;
         color: var(--colors-coral700); //#d91d4c; var(--wine-01);
         font-size: 90%;
-        border: 1px solid #f0f1f3a3;
+        border: 1px solid var(--ifm-color-emphasis-200);
         font-weight: 400;
       }
     }
