--- a/src/features/dashboard/components/ApiTokenCard/api-token.card.module.scss
+++ b/src/features/dashboard/components/ApiTokenCard/api-token.card.module.scss
@@ -11,6 +11,10 @@
   border-radius: rem(0.4);
   padding: rem(1.6);
 
+  label {
+    pointer-events: none;
+  }
+
   p {
     font-size: var(--fontSizes-2xs);
   }
