--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,6 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
-
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
@@ -70,4 +69,30 @@ h6 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.card {
+  box-shadow: 0px 12px 16px -4px rgba(14, 14, 14, 0.08), 0px 4px 6px -2px rgba(14, 14, 14, 0.03) !important;
+  border-radius: 16px;
+  color: rgba(65, 70, 82, 1);
+}
+
+[class*='cardTitle'] {
+  line-height: 2.25rem !important;
+  font-size: var(--fontSizes-lg);
+}
+
+[class*='cardDescription'] {
+  // margin: 8px 0px 25px 0px !important;
+  margin-top: 8px !important;
+  line-height: 1.5rem !important;
+}
+
+[class*='cardContainer']::after {
+  content: url(/img/arrow_right_red.svg);
+  position: relative;
+  color: #ff444f;
+  font-weight: bold;
+  top: 16px;
+  left: 240px;
 }
