--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -78,12 +78,11 @@ h6 {
 }
 
 [class*='cardTitle'] {
+  font-size: var(--ifm-h2-font-size);
   line-height: 2.25rem !important;
-  font-size: var(--fontSizes-lg);
 }
 
 [class*='cardDescription'] {
-  // margin: 8px 0px 25px 0px !important;
   margin-top: 8px !important;
   line-height: 1.5rem !important;
 }
@@ -91,8 +90,6 @@ h6 {
 [class*='cardContainer']::after {
   content: url(/img/arrow_right_red.svg);
   position: relative;
-  color: #ff444f;
-  font-weight: bold;
-  top: 16px;
-  left: 240px;
+  top: 1rem;
+  left: 15rem;
 }
