--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -78,18 +78,19 @@ h6 {
 }
 
 [class*='cardTitle'] {
-  font-size: var(--ifm-h2-font-size);
-  line-height: 2.25rem !important;
+  font-size: var(--ifm-h2-font-size) !important;
+  line-height: 2.25rem;
 }
 
 [class*='cardDescription'] {
   margin-top: 8px !important;
-  line-height: 1.5rem !important;
+  line-height: 1.5rem;
+  font-size: var(--ifm-h4-font-size) !important;
 }
 
 [class*='cardContainer']::after {
   content: url(/img/arrow_right_red.svg);
   position: relative;
   top: 1rem;
-  left: 15rem;
+  left: 98%;
 }
