feat: changed the banner on homepage

--- a/src/features/Home/HeroHeader/HeroHeader.module.scss
+++ b/src/features/Home/HeroHeader/HeroHeader.module.scss
@@ -1,7 +1,8 @@
 @use 'src/styles/utility' as *;
 .HeroImageStyle {
   background-color: var(--ifm-color-secondary-contrast-foreground);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16)), url(/img/header.png);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16)),
+    url(/img/banner-homepage.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
