fix: css revert

--- a/src/features/Home/GetStarted/GetStarted.module.scss
+++ b/src/features/Home/GetStarted/GetStarted.module.scss
@@ -82,3 +82,11 @@
   background-image: url(/img/pattern.svg);
   object-fit: contain;
 }
+
+[data-theme='dark'] .dark {
+  color: var(--ifm-color-black);
+}
+
+[data-theme='dark'] .withPattern {
+  background-image: unset;
+}
