--- a/src/theme/DocCard/styles.module.scss
+++ b/src/theme/DocCard/styles.module.scss
@@ -1,11 +1,13 @@
+@use 'src/styles/utility' as *;
+
 .cardContainer {
   --ifm-link-color: var(--ifm-color-emphasis-800);
   --ifm-link-hover-color: var(--ifm-color-emphasis-700);
   --ifm-link-hover-decoration: none;
 
-  box-shadow: 0px 12px 16px -4px rgba(14, 14, 14, 0.08), 0px 4px 6px -2px rgba(14, 14, 14, 0.03) !important;
-  border: 1px solid var(--ifm-color-emphasis-200);
-  border-radius: 16px;
+  box-shadow: 0 rem(1.2) rem(1.6) rem(-0.4) rgba(14, 14, 14, 0.08),
+    rem(0) rem(0.4) rem(0.6) rem(-0.2) rgba(14, 14, 14, 0.03) !important;
+  border-radius: rem(1.6);
   color: rgba(65, 70, 82, 1);
   transition: all var(--ifm-transition-fast) ease;
   transition-property: border, box-shadow;
@@ -13,13 +15,13 @@
 
 .cardContainer:hover {
   border-color: var(--ifm-color-primary);
-  box-shadow: 0 3px 6px 0 rgb(0 0 0 / 20%);
+  box-shadow: 0 rem(0.3) rem(0.6) 0 rgb(0 0 0 / 20%);
 }
 
 .cardContainer::after {
   content: url(/img/arrow_right_red.svg);
   position: relative;
-  top: 0.8rem;
+  top: rem(1.2);
   left: 98%;
 }
 
@@ -29,11 +31,11 @@
 
 .cardTitle {
   font-size: var(--ifm-h2-font-size) !important;
-  line-height: 2.25rem;
+  line-height: rem(3.6);
 }
 
 .cardDescription {
-  margin-top: 8px;
-  line-height: 1.5rem;
+  margin-top: rem(0.8);
+  line-height: rem(2.4);
   font-size: var(--ifm-h4-font-size);
 }
