--- a/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
+++ b/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
@@ -10,7 +10,8 @@ button {
   background-color: var(--ifm-color-emphasis-100);
   border-radius: 6px;
   padding: rem(0.5);
-  box-shadow: 0 rem(1) rem(3.8) rem(-1) rgba(22, 23, 24, 0.35), 0 rem(1) rem(2) rem(-1.5) rgba(22, 23, 24, 0.2);
+  box-shadow: 0 rem(1) rem(3.8) rem(-1) rgba(22, 23, 24, 0.35),
+    0 rem(1) rem(2) rem(-1.5) rgba(22, 23, 24, 0.2);
   animation-duration: 400ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
@@ -55,6 +56,14 @@ button {
   fill: var(--ifm-color-emphasis-100);
 }
 
+.CreateToken {
+  color: var(--colors-coral500);
+}
+
+.CreateToken:hover {
+  color: var(--ifm-navbar-link-hover-color);
+  text-decoration: none;
+}
 @keyframes slideUpAndFade {
   from {
     opacity: 0;
