fix: order and rebranding

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,3 +70,9 @@ h6 {
   justify-content: center;
   align-items: center;
 }
+
+.navbar__link:hover,
+.navbar__link--active {
+  color: var(--colors-coral600);
+  text-decoration: none;
+}
