--- a/src/features/Home/HeroHeader/HeroHeader.module.scss
+++ b/src/features/Home/HeroHeader/HeroHeader.module.scss
@@ -1,9 +1,9 @@
 @use 'src/styles/utility' as *;
 .HeroImageStyle {
-  background-color: var(--ifm-color-secondary-contrast-foreground);
   background-image: linear-gradient(rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16)),
-    url(/img/banner-homepage.jpg);
+    url(/img/banner-homepage.svg);
   background-position: center;
+  object-fit: cover;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
