fix: banner fix3

--- a/src/features/Home/HeroHeader/HeroHeader.module.scss
+++ b/src/features/Home/HeroHeader/HeroHeader.module.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/utility' as *;
 .HeroImageStyle {
   background-image: linear-gradient(rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16)),
-    url(/img/banner-homepage.svg);
+    url(/img/banner-homepage.jpg);
   background-position: center;
   object-fit: cover;
   background-repeat: no-repeat;
