--- a/src/features/Home/ApiFeatures/ApiFeatures.module.scss
+++ b/src/features/Home/ApiFeatures/ApiFeatures.module.scss
@@ -37,6 +37,10 @@
         margin-left: rem(4);
       }
 
+      .FeatureParagraph {
+        font-weight: 500;
+        line-height: rem(2);
+      }
       .FeatureList {
         margin-left: rem(-2);
         font-weight: 500;
