--- a/src/features/Home/Carousel/Carousel.module.scss
+++ b/src/features/Home/Carousel/Carousel.module.scss
@@ -1,24 +1,26 @@
 @use 'src/styles/utility' as *;
 
 .carouselComponent {
-    margin: rem(16) 0 rem(16);
+  margin: rem(16) 0 rem(16);
 
-    .carouselContainer {
-        display: flex;
-        flex-direction: row;
-        width: fit-content;
-        margin: 0 auto;
-        align-items: center;
-
-        .control {
-            width: rem(5);
-            height: rem(5);
-            background-size: rem(2.5) rem(2.5);
-            background-position: center;
-            cursor: pointer;
-            &:active {
-                background-size: rem(2) rem(2);
-            }
-        }
+  .carouselContainer {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    margin: 0 auto;
+    align-items: center;
+    .carouselHeading {
+      margin-bottom: rem(6);
     }
+    .control {
+      width: rem(5);
+      height: rem(5);
+      background-size: rem(2.5) rem(2.5);
+      background-position: center;
+      cursor: pointer;
+      &:active {
+        background-size: rem(2) rem(2);
+      }
+    }
+  }
 }
