--- a/src/features/Home/ClientLibraries/ClientLibraries.module.scss
+++ b/src/features/Home/ClientLibraries/ClientLibraries.module.scss
@@ -11,6 +11,15 @@
   width: 100%;
   background-size: auto;
 
+  .Heading {
+    margin-bottom: rem(2.5);
+  }
+  .SubHeading {
+    font-weight: 400;
+    @media (max-width: 992px) {
+      text-align: center;
+    }
+  }
   .IconJS {
     display: flex;
     justify-content: center;
