chore: fixing carousel and styling bugs

--- a/src/features/Home/Benefits/Benefits.module.scss
+++ b/src/features/Home/Benefits/Benefits.module.scss
@@ -4,6 +4,11 @@
   width: 100%;
   margin-top: rem(10);
 
+  .Heading {
+    margin-bottom: rem(2.5);
+    padding: 0 rem(2);
+  }
+
   .BenefitsIcons {
     width: 100%;
     flex-wrap: nowrap;
