--- a/src/features/Home/GetStarted/GetStarted.module.scss
+++ b/src/features/Home/GetStarted/GetStarted.module.scss
@@ -18,10 +18,20 @@
     align-items: center;
     justify-content: center;
 
+    .getStartedHeading {
+      text-align: center;
+      padding: 0 rem(2.5);
+    }
+
+    .termConditions {
+      padding: 0 rem(2.5);
+    }
+
     .cardContainer {
       display: flex;
       flex-direction: row;
       margin-bottom: rem(4);
+      gap: rem(1.2);
       @media screen and (max-width: 992px) {
         flex-direction: column;
         gap: rem(2);
@@ -34,7 +44,6 @@
       border-radius: 4px;
       box-shadow: 0 0.4rem 0.8rem 0 rgb(14, 14, 14, 0.1);
       background-color: var(--ifm-color-white);
-      margin: 0 rem(1.2);
       font-size: rem(1.6);
       line-height: 1.5;
       color: var(--ifm-color-black);
