--- a/src/features/Home/WaysToEarn/WaysToEarn.module.scss
+++ b/src/features/Home/WaysToEarn/WaysToEarn.module.scss
@@ -18,6 +18,8 @@
     }
     .WaysHeading {
       max-width: 384px;
+      margin-bottom: rem(2.5);
+      padding: 0 rem(2);
     }
 
     .Ways {
