--- a/src/features/Home/Carousel/Carousel.module.scss
+++ b/src/features/Home/Carousel/Carousel.module.scss
@@ -3,23 +3,41 @@
 .carouselComponent {
   margin: rem(16) 0 rem(16);
 
+  .carouselHeading {
+    margin-bottom: rem(6);
+    padding: 0 rem(2.5);
+  }
+
   .carouselContainer {
     display: flex;
     flex-direction: row;
     width: fit-content;
     margin: 0 auto;
     align-items: center;
-    .carouselHeading {
-      margin-bottom: rem(6);
-    }
+    overflow: visible;
     .control {
       width: rem(5);
       height: rem(5);
-      background-size: rem(2.5) rem(2.5);
-      background-position: center;
       cursor: pointer;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 2;
       &:active {
         background-size: rem(2) rem(2);
+      }
+      &.next {
+        background: url(/img/arrow_right.svg) no-repeat;
+        background-size: rem(2.5) rem(2.5);
+        background-position: center;
+        overflow: auto;
+        right: 0;
+      }
+      &.prev {
+        background: url(/img/arrow_left.svg) no-repeat;
+        background-size: rem(2.5) rem(2.5);
+        background-position: center;
+        left: 0;
       }
     }
   }
