--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: rem(1);
     .FooterContent {
       color: var(--ifm-color-white);
       @media screen and (max-width: 992px) {
