--- a/src/features/Home/GetStarted/GetStarted.module.scss
+++ b/src/features/Home/GetStarted/GetStarted.module.scss
@@ -8,7 +8,6 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: rem(8) 0;
 
   .columnContainer {
     display: flex;
@@ -20,7 +19,7 @@
 
     .getStartedHeading {
       text-align: center;
-      padding: 0 rem(2.5);
+      padding: 0 rem(2.5) rem(4) rem(2.5);
     }
 
     .termConditions {
@@ -31,7 +30,7 @@
       display: flex;
       flex-direction: row;
       margin-bottom: rem(4);
-      gap: rem(1.2);
+      gap: rem(2.4);
       @media screen and (max-width: 992px) {
         flex-direction: column;
         gap: rem(2);
@@ -48,6 +47,7 @@
       line-height: 1.5;
       color: var(--ifm-color-black);
       margin-bottom: 0;
+      position: relative;
 
       .header {
         display: flex;
@@ -64,9 +64,10 @@
       }
       .arrow {
         display: flex;
-        position: relative;
+        position: absolute;
         justify-content: end;
-        top: rem(4);
+        bottom: rem(2);
+        right: rem(2);
       }
       .arrowMiddle {
         display: flex;
