--- a/src/features/Home/WaysToEarn/WaysToEarn.module.scss
+++ b/src/features/Home/WaysToEarn/WaysToEarn.module.scss
@@ -11,8 +11,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    margin: rem(16) auto 0 auto;
-    padding: rem(3) 0;
+    margin: 0 auto;
     @media screen and (max-width: 992px) {
       width: 100%;
     }
