--- a/src/features/Home/styles.module.scss
+++ b/src/features/Home/styles.module.scss
@@ -1,5 +1,10 @@
+@use 'src/styles/utility' as *;
+
 .features {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: rem(15);
 }
 
 .featureSvg {
