style: change rem to px

--- a/src/theme/DocPage/Layout/Sidebar/styles.module.scss
+++ b/src/theme/DocPage/Layout/Sidebar/styles.module.scss
@@ -1,8 +1,8 @@
 @use 'src/styles/utility' as *;
 
 :root {
-  --doc-sidebar-width: 17.688rem;
-  --doc-sidebar-hidden-width: 1.875rem;
+  --doc-sidebar-width: 283px;
+  --doc-sidebar-hidden-width: 30px;
 }
 
 .docSidebarContainer {
