--- a/src/components/AccountSwitcher/account_switcher.module.scss
+++ b/src/components/AccountSwitcher/account_switcher.module.scss
@@ -1,99 +1,25 @@
 @use 'src/styles/utility' as *;
 
-/* reset */
-button {
-  all: unset;
-}
-
-.DropdownMenuContent {
-  min-width: rem(22);
-  background-color: var(--ifm-color-emphasis-100);
-  border-radius: 6px;
-  padding: rem(0.5);
-  box-shadow: 0 rem(1) rem(3.8) rem(-1) rgba(22, 23, 24, 0.35), 0 rem(1) rem(2) rem(-1.5) rgba(22, 23, 24, 0.2);
-  animation-duration: 400ms;
-  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-  will-change: transform, opacity;
-}
-.DropdownMenuContent[data-side='top'] {
-  animation-name: slideDownAndFade;
-}
-.DropdownMenuContent[data-side='right'] {
-  animation-name: slideLeftAndFade;
-}
-.DropdownMenuContent[data-side='bottom'] {
-  animation-name: slideUpAndFade;
-}
-.DropdownMenuContent[data-side='left'] {
-  animation-name: slideRightAndFade;
-}
-
-.DropdownMenuItem[data-highlighted],
-.DropdownMenuCheckboxItem[data-highlighted],
-.DropdownMenuRadioItem[data-highlighted],
-.DropdownMenuSubTrigger[data-highlighted] {
-  background-color: var(--ifm-color-emphasis-0);
-  color: var(--ifm-color-emphasis-900);
-}
-
-.DropdownMenuItem {
-  font-size: 13px;
-  line-height: 1;
-  border-radius: 3px;
-  display: flex;
-  align-items: center;
-  height: rem(2.5);
-  padding: 0 rem(0.5);
+.accountSwitcher {
   position: relative;
-  padding-left: rem(2.5);
-  user-select: none;
-  outline-color: transparent;
-}
+  
+  button {
+    cursor: pointer;
+  }
 
-.DropdownMenuArrow {
-  fill: var(--ifm-color-emphasis-100);
-}
+  .accountDropdownContainer {
+    position: absolute;
+    background-color: var(--colors-greyLight100);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05), 0px 16px 20px rgba(0, 0, 0, 0.05);
+    &.active {
+      display: flex;
+      width: rem(32);
+      right: 50%;
+      transform: translatex(25%);
+    }
 
-@keyframes slideUpAndFade {
-  from {
-    opacity: 0;
-    transform: translateY(rem(0.2));
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes slideRightAndFade {
-  from {
-    opacity: 0;
-    transform: translateX(rem(-0.2));
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideDownAndFade {
-  from {
-    opacity: 0;
-    transform: translateY(rem(-0.2));
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes slideLeftAndFade {
-  from {
-    opacity: 0;
-    transform: translateX(rem(0.2));
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
+    &.inactive {
+      display: none;
+    }
   }
 }
