--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @use 'src/styles/utility' as *;
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400;500;700&display=swap');
 
 /**
  * Any CSS included here will be global. The classic template
@@ -7,6 +8,7 @@
  */
 /* You can override the default Infima variables here. */
 :root {
+  font-style: 'IBM Plex Sans', sans-serif;
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
