--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,7 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-menu-color: #414652;
-  --ifm-menu-link-sublist-icon: url(/img/arrow_sidebar.svg);
+  --ifm-menu-link-sublist-icon-2: url(/img/arrow_sidebar.svg);
   --ifm-menu-link-padding-vertical: 9px;
 }
 
@@ -98,7 +98,7 @@ h6 {
 }
 
 .menu__caret:before {
-  background: var(--ifm-menu-link-sublist-icon);
+  background: var(--ifm-menu-link-sublist-icon-2);
   filter: var(--ifm-menu-link-sublist-icon-filter);
   height: rem(1.2);
   transform: rotateZ(90deg);
@@ -114,6 +114,6 @@ h6 {
   color: var(--colors-coral600);
 }
 
-.clean-btn {
+.menu__caret {
   margin-right: rem(3.3);
 }
