fix: font style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
  */
 /* You can override the default Infima variables here. */
 :root {
-  font-style: 'IBM Plex Sans', sans-serif;
+  --ibm-font-family-base: 'IBM Plex Sans', sans-serif;
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
