--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -19,6 +19,7 @@
     align-items: center;
     gap: rem(1);
     .FooterContent {
+      font-family: 'Ubuntu', sans-serif;
       color: var(--ifm-color-white);
       @media screen and (max-width: 992px) {
         font-size: rem(2);
@@ -37,6 +38,7 @@
       padding: 0 rem(0.5);
     }
     .communityButton {
+      font-family: 'Ubuntu', sans-serif;
       color: var(--ifm-color-white);
       border: 2px solid var(--ifm-color-secondary-darkest);
       padding: rem(0.5);
