--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/utility' as *;
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu');
 
 /**
  * Any CSS included here will be global. The classic template
@@ -44,6 +44,16 @@
   margin: 0;
   padding: 0;
   scroll-margin-top: rem(10);
+  font-family: var(--ibm-font-family-base);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--ibm-font-family-header);
 }
 
 .error-message {
