chore: adding accountswitcher

--- a/src/components/CustomSelectDropdown/custom_select_item.module.scss
+++ b/src/components/CustomSelectDropdown/custom_select_item.module.scss
@@ -7,7 +7,7 @@
     font-size: rem(1.4);
     transition: background-color 0.2s;
     border-radius: 3px;
-    padding: 10px;
+    padding: rem(1);
     
     &:hover {
         cursor: pointer;
