--- a/src/components/AccountSwitcher/account_switcher.module.scss
+++ b/src/components/AccountSwitcher/account_switcher.module.scss
@@ -2,20 +2,104 @@
 
 .accountSwitcher {
   position: relative;
+  display: flex;
+  height: 100%;
+  align-items: center;
+
+  &.active button {
+    &::after {
+      transform: rotate(180deg);
+    }
+  }
   
   button {
+    display: flex;
     cursor: pointer;
+    font-weight: bold;
+    color: var(--text-profit-success);
+    padding: 0 rem(0.8);
+    gap: rem(0.8);
+    height: 100%;
+    align-items: center;
+    &:hover {
+      background-color: var(--ifm-color-emphasis-100);
+      transition: background-color 0.2s;
+    }
+
+    &::after {
+      content: '';
+      background-image: url('/img/arrow_up.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: rem(2);
+      width: rem(1.2);
+      height: rem(1.2);
+      transform: rotate(0deg);
+      transition: transform .2s ease-in-out;
+    }
+  }
+
+  .currencyIconContainer {
+    width: rem(2.4);
+    height: rem(2.4);
   }
 
   .accountDropdownContainer {
     position: absolute;
     background-color: var(--colors-greyLight100);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05), 0px 16px 20px rgba(0, 0, 0, 0.05);
+    padding: rem(0.8);
+
+    .dropdownHeader {
+      display: flex;
+      padding: rem(0.5) rem(1.5);
+      justify-content: space-between;
+      align-items: center;
+      img {
+        width: rem(2.6);
+        height: rem(2.6);
+        border-radius: 100%;
+        padding: rem(0.5);
+        &:hover {
+          background-color: var(--ifm-color-emphasis-100);
+          transition: background-color 0.2s;
+          cursor: pointer;
+        }
+      }
+    }
+
     &.active {
       display: flex;
+      gap: rem(0.8);
       width: rem(32);
-      right: 50%;
+      right: calc(50% + rem(1));
+      top: 100%;
       transform: translatex(25%);
+      flex-direction: column;
+      > div:nth-child(2) {
+        background-color: var(--ifm-color-emphasis-200);
+        align-items: center;
+        font-size: rem(1.4);
+        transition: background-color 0.2s;
+        border-radius: 3px;
+        padding: rem(1);
+        > div {
+          line-height: rem(2);
+          span {
+            font-size: rem(1.4);
+            &:nth-child(1) {
+              font-weight: bold;
+            }
+            &:nth-child(2) {
+              color: var(--ifm-color-emphasis-600);
+            }
+          }
+        }
+        img {
+          width: rem(3.2);
+          height: rem(3.2);
+        }
+      }
     }
 
     &.inactive {
