--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --text-profit-success: #4bb4b3;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
@@ -80,14 +81,14 @@ body {
   align-items: center;
 }
 
+.navbar {
+  padding: 0 rem(1.5);
+}
+
 .navbar__link:hover,
 .navbar__link--active {
   color: var(--colors-coral600);
   text-decoration: none;
-}
-
-.navbar {
-  padding: rem(1.3) 0 rem(2.3) rem(3.9);
 }
 
 .navbar__brand {
