--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/utility' as *;
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
 /**
  * Any CSS included here will be global. The classic template
@@ -13,7 +13,7 @@
 
 :root {
   --ibm-font-family-base: 'IBM Plex Sans', sans-serif;
-  --ibm-font-family-header: 'Ubuntu', sans-serif;
+  --ubuntu-font-family-header: 'Ubuntu', sans-serif;
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -56,7 +56,16 @@ h6,
 ul li a,
 nav a,
 nav a div {
-  font-family: var(--ibm-font-family-header);
+  font-family: var(--ubuntu-font-family-header);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
 }
 
 .error-message {
@@ -96,6 +105,11 @@ body {
   }
 }
 
+[class*='docMainContainer'] .container {
+  padding-top: rem(4) !important;
+  margin: 0 rem(4) !important;
+}
+
 .loading {
   position: absolute;
   width: 100%;
@@ -106,27 +120,33 @@ body {
   align-items: center;
 }
 
-.navbar__link:hover,
-.navbar__link--active {
-  color: var(--colors-coral600);
-  text-decoration: none;
-}
-
 .navbar {
-  padding: rem(1.3) 0 rem(2.3) rem(3.9);
-}
-
-.navbar__brand {
-  margin-right: rem(5);
+  height: rem(7.2);
+  padding: rem(2) rem(4);
+  &__link {
+  font-weight: normal !important;
+    &--active,
+    &:hover {
+      color: var(--colors-coral600);
+      text-decoration: none;
+    }
+  }
+  &__brand {
+    margin-right: rem(5);
+  }
+  &__logo {
+    width: rem(12);
+  }
 }
 
 .menu__list {
-  margin-top: rem(5);
+  margin-top: rem(9);
 }
 
 .menu__link {
   font-size: rem(1.4);
   font-weight: var(--ifm-font-weight-normal);
+  line-height: 1.5;
 }
 
 .menu__caret:before {
@@ -149,10 +169,6 @@ body {
 
 .menu__caret {
   margin-right: rem(3.3);
-}
-
-aside.theme-doc-sidebar-container {
-  width: rem(28.3);
 }
 
 [class*='tocCollapsibleButton'] {
