--- a/src/components/AccountSwitcher/account_switcher.module.scss
+++ b/src/components/AccountSwitcher/account_switcher.module.scss
@@ -1,18 +1,54 @@
 @use 'src/styles/utility' as *;
 
 .accountSwitcher {
-  position: relative;
   display: flex;
+  position: relative;
   height: 100%;
   align-items: center;
 
-  &.active button {
+  @media (max-width: 768px) {
+    font-size: rem(1.2);
+    position: unset;
+  }
+
+  button.demo {
+    color: var(--demo-account);
+  }
+
+  &.active > button {
     &::after {
-      transform: rotate(180deg);
+      transform: rotate(-180deg);
     }
   }
-  
-  button {
+
+  .logoutButtonContainer {
+    display: flex;
+    justify-content: flex-end;
+    border-top: 2px solid var(--ifm-color-emphasis-200);
+    padding: rem(1) rem(2.5);
+
+    button.logoutButton {
+      display: flex;
+      gap: rem(1);
+      justify-content: center;
+      align-items: center;
+      width: fit-content;
+      font-size: rem(1.4);
+      cursor: pointer;
+      &::after {
+        content: '';
+        display: inline-block;
+        background-image: url('/img/logout.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: rem(1.5);
+        width: rem(1.5);
+        height: rem(1.5);
+      }
+    }
+  }
+
+  > button {
     display: flex;
     cursor: pointer;
     font-weight: bold;
@@ -28,12 +64,12 @@
 
     &::after {
       content: '';
-      background-image: url('/img/arrow_up.svg');
+      background-image: url('/img/arrow_down_bold.svg');
       background-repeat: no-repeat;
       background-position: center;
-      background-size: rem(2);
-      width: rem(1.2);
-      height: rem(1.2);
+      background-size: rem(1.5);
+      width: rem(1.5);
+      height: rem(1.5);
       transform: rotate(0deg);
       transition: transform .2s ease-in-out;
     }
@@ -48,7 +84,17 @@
     position: absolute;
     background-color: var(--colors-greyLight100);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05), 0px 16px 20px rgba(0, 0, 0, 0.05);
-    padding: rem(0.8);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+
+    @media (max-width: 768px) {
+      // no other way of overwriting the code from the original component
+      // important will only be used here in the scope of this component (navbar)
+      right: 0 !important;
+      left: 0 !important;
+      width: 100% !important;
+      transform: unset !important;
+    }
 
     .dropdownHeader {
       display: flex;
@@ -72,10 +118,12 @@
       display: flex;
       gap: rem(0.8);
       width: rem(32);
-      right: calc(50% + rem(1));
+      right: 0;
       top: 100%;
-      transform: translatex(25%);
       flex-direction: column;
+      > div:not(:last-child) {
+        margin: 0 rem(0.8);
+      }
       > div:nth-child(2) {
         background-color: var(--ifm-color-emphasis-200);
         align-items: center;
