--- a/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
+++ b/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
@@ -1,109 +1,122 @@
 @use 'src/styles/utility' as *;
 
-/* reset */
-button {
-  all: unset;
-}
-
-.DropdownMenuContent {
-  min-width: rem(22);
-  background-color: var(--ifm-color-emphasis-100);
-  border-radius: 6px;
-  padding: rem(0.5);
-  box-shadow: 0 rem(1) rem(3.8) rem(-1) rgba(22, 23, 24, 0.35),
-    0 rem(1) rem(2) rem(-1.5) rgba(22, 23, 24, 0.2);
-  animation-duration: 400ms;
-  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-  will-change: transform, opacity;
-}
-.DropdownMenuContent[data-side='top'] {
-  animation-name: slideDownAndFade;
-}
-.DropdownMenuContent[data-side='right'] {
-  animation-name: slideLeftAndFade;
-}
-.DropdownMenuContent[data-side='bottom'] {
-  animation-name: slideUpAndFade;
-}
-.DropdownMenuContent[data-side='left'] {
-  animation-name: slideRightAndFade;
-}
-
-.DropdownMenuItem[data-highlighted],
-.DropdownMenuCheckboxItem[data-highlighted],
-.DropdownMenuRadioItem[data-highlighted],
-.DropdownMenuSubTrigger[data-highlighted] {
-  background-color: var(--ifm-color-emphasis-0);
-  color: var(--ifm-color-emphasis-900);
-}
-
-.DropdownMenuItem {
-  font-size: rem(1.3);
-  line-height: 1;
-  color: var(--violet11);
-  border-radius: 3px;
+.tokenDropdownContainer {
+  position: relative;
+  height: 100%;
   display: flex;
   align-items: center;
-  height: rem(2.5);
-  padding: 0 rem(0.5);
-  position: relative;
-  padding-left: rem(2.5);
-  user-select: none;
-  outline: none;
-}
+  justify-content: center;
 
-.DropdownMenuArrow {
-  fill: var(--ifm-color-emphasis-100);
-}
+  @media (max-width: 1200px) {
+    position: absolute;
+    width: 100%;
+    top: calc(var(--nav-height) - rem(0.1));
+    left: 0;
+    right: 0;
+    height: rem(3.4);
+    border-bottom: 1px solid var(--ifm-color-emphasis-200);
+    background-color: var(--ifm-color-emphasis-0);
+  }
 
-.CreateToken {
-  color: var(--colors-coral500);
-}
+  .tokenContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 2px solid var(--ifm-color-emphasis-200);
+    .createToken {
+      padding: rem(1) 0;
+      color: var(--ifm-color-emphasis-900);
+      font-size: rem(1.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      gap: rem(1);
+      &::before {
+        content: '';
+        display: inline-block;
+        background-image: url('/img/plus_bold.svg');
+        background-size: rem(1.2);
+        width: rem(1.2);
+        height: rem(1.2);
+        transform: rotate(0deg);
+        transition: transform .2s;
+      }
+      &:hover {
+        text-decoration: none;
+        &::before {
+          transform: rotate(90deg);
+        }
+      }
+    }
+  }
+  > .tokenContainer {
+    border-top: none;
+  }
+  .tokenDropdownButton {
+    display: flex;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: rem(1.4);
+    align-items: center;
+    justify-content: center;
+    gap: rem(1);
+    height: 100%;
+    margin-right: rem(4);
 
-.CreateToken:hover {
-  color: var(--ifm-navbar-link-hover-color);
-  text-decoration: none;
-}
-@keyframes slideUpAndFade {
-  from {
-    opacity: 0;
-    transform: translateY(rem(0.2));
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+    @media (max-width: 1200px) {
+      margin: 0 auto;
+    }
 
-@keyframes slideRightAndFade {
-  from {
-    opacity: 0;
-    transform: translateX(rem(-0.2));
+    &::after {
+      content: '';
+      display: inline-block;
+      background-image: url('/img/arrow_down_bold.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: rem(1.5);
+      width: rem(1.5);
+      height: rem(1.5);
+      transform: rotate(0deg);
+      transition: transform .2s ease-in-out;
+    }
+    &.active::after {
+      transform: rotate(-180deg);
+    }
+    &.oneToken::after {
+      display: none;
+    }
+    @media (max-width: 768px) {
+      font-size: rem(1.2);
+    }
   }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideDownAndFade {
-  from {
-    opacity: 0;
-    transform: translateY(rem(-0.2));
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes slideLeftAndFade {
-  from {
-    opacity: 0;
-    transform: translateX(rem(2));
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
+  .tokenDropdownWrapper {
+    position: absolute;
+    background-color: var(--ifm-color-emphasis-0);
+    width: rem(27);
+    right: rem(4);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05), 0px 16px 20px rgba(0, 0, 0, 0.05);
+    top: 100%;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    > .tokenContainer .createToken {
+      font-weight: normal;
+      &::before {
+        background-image: url('/img/plus.svg');
+      }
+    }
+    .tokenDropdown {
+      padding: rem(0.8);
+      display: flex;
+      flex-direction: column;
+      gap: rem(0.8);
+    }
+    @media (max-width: 1200px) {
+      position: fixed;
+      width: 100%;
+      top: calc(var(--nav-height) + rem(3.3));
+      left: 0;
+      right: 0;
+    }
   }
 }
