--- a/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
+++ b/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: rem(2);
 
   @media (max-width: 1200px) {
     position: absolute;
@@ -62,7 +63,6 @@
     justify-content: center;
     gap: rem(1);
     height: 100%;
-    margin-right: rem(4);
 
     @media (max-width: 1200px) {
       margin: 0 auto;
@@ -94,7 +94,7 @@
     position: absolute;
     background-color: var(--ifm-color-emphasis-0);
     width: rem(27);
-    right: rem(4);
+    right: 0;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05), 0px 16px 20px rgba(0, 0, 0, 0.05);
     top: 100%;
     border-bottom-left-radius: 4px;
