--- a/src/features/dashboard/components/Table/table.scss
+++ b/src/features/dashboard/components/Table/table.scss
@@ -17,6 +17,7 @@
     text-align: left;
     padding: rem(1.6);
     min-width: rem(14.4);
+    max-width: rem(14.4);
     overflow: visible;
     text-overflow: ellipsis;
     border: none;
