--- a/src/features/Home/ClientLibraries/ClientLibraries.module.scss
+++ b/src/features/Home/ClientLibraries/ClientLibraries.module.scss
@@ -14,7 +14,9 @@
     margin: rem(1) 0;
     padding: 0 rem(2);
   }
-  .SubHeading {
+  .SubText {
+    text-align: center;
+    font-size: rem(2.4);
     font-weight: 400;
     margin: rem(2) 0;
     padding: 0 rem(2);
