--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,5 @@
 @use 'src/styles/utility' as *;
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 /**
  * Any CSS included here will be global. The classic template
@@ -13,7 +12,7 @@
 
 :root {
   --ibm-font-family-base: 'IBM Plex Sans', sans-serif;
-  --ibm-font-family-header: 'Ubuntu', sans-serif;
+  --ubuntu-font-family: 'Ubuntu', sans-serif;
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -40,10 +39,14 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+// Be very careful adding new things to the star selector.
 * {
   margin: 0;
   padding: 0;
-  scroll-margin-top: rem(10);
+  box-sizing: border-box;
+}
+
+html {
   font-family: var(--ibm-font-family-base);
 }
 
@@ -52,8 +55,10 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-family: var(--ibm-font-family-header);
+h6,
+a,
+button {
+  font-family: var(--ubuntu-font-family);
 }
 
 .error-message {
