--- a/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
+++ b/src/components/ApiTokenNavbarItem/api_token_switcher.module.scss
@@ -62,11 +62,7 @@
     align-items: center;
     justify-content: center;
     gap: rem(1);
-    height: 100%;
-
-    @media (max-width: 1200px) {
-      margin: 0 auto;
-    }
+    height: var(--nav-height);
 
     &::after {
       content: '';
@@ -89,6 +85,17 @@
     @media (max-width: 768px) {
       font-size: rem(1.2);
     }
+    @media (max-width: 1200px) {
+      margin: 0 auto;
+    }
+    @media (min-width: 1201px) {
+      span {
+        max-width: rem(15);
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+      }
+    }
   }
   .tokenDropdownWrapper {
     position: absolute;
@@ -96,7 +103,7 @@
     width: rem(27);
     right: 0;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05), 0px 16px 20px rgba(0, 0, 0, 0.05);
-    top: 100%;
+    top: var(--nav-height);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     > .tokenContainer .createToken {
