--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,7 @@
   --text-profit-success: #4bb4b3;
   --demo-account: #377CFC;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --nav-height: 60px;
+  --nav-height: 72px;
   --ifm-menu-color: #414652;
   --ifm-menu-link-sublist-icon-2: url(/img/arrow_sidebar.svg);
   --ifm-menu-link-padding-vertical: 9px;
@@ -81,7 +81,7 @@ h6 {
 }
 
 .error-message {
-  color: var(--colors-coral600) !important;
+  color: var(--colors-coral500) !important;
 }
 
 /* reset */
@@ -90,9 +90,9 @@ button {
 }
 
 a {
-  color: var(--colors-coral600);
+  color: var(--colors-coral500);
   &:hover {
-    color: var(--colors-coral600);
+    color: var(--colors-coral500);
   }
 }
 
@@ -153,15 +153,18 @@ div[class*='sidebarViewport'] {
 }
 
 .navbar {
-  padding: 0 rem(1.5);
+  padding: 0 5%;
   height: var(--nav-height);
+  @media (max-width: 996px) {
+    padding: 0 rem(1.5);
+  }
   &__inner .navbar__items:first-child a {
     font-weight: normal;
   }
   &__link {
     &--active,
     &:hover {
-      color: var(--colors-coral600);
+      color: var(--colors-coral500);
       text-decoration: none;
     }
   }
@@ -216,7 +219,7 @@ main[class*='docMainContainer'] .container {
 
 .menu__link--active,
 .menu__link--active:hover {
-  color: var(--colors-coral600);
+  color: var(--colors-coral500);
 }
 
 .menu__caret {
