chore: fixing tests and deleting obsolete ones

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -194,7 +194,7 @@ main[class*='docMainContainer'] .container {
   }
 }
 
-.menu__list {
+[class*='DocSidebar'] .theme-doc-sidebar-menu {
   margin-top: rem(9);
 }
 
