--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -194,7 +194,7 @@ main[class*='docMainContainer'] .container {
   }
 }
 
-[class*='DocSidebar'] .theme-doc-sidebar-menu {
+.theme-doc-sidebar-container .theme-doc-sidebar-menu {
   margin-top: rem(9);
 }
 
