--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,6 +29,11 @@
   --ifm-menu-link-sublist-icon-2: url(/img/arrow_sidebar.svg);
   --ifm-menu-link-padding-vertical: 9px;
   --doc-sidebar-width: 283px !important;
+  --schema-string: #21d169;
+  --schema-array: #ff8fc8;
+  --schema-number: #acb2ff;
+  --schema-integer: #f8c272;
+
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
