--- a/src/features/Apiexplorer/Schema/Schema.module.scss
+++ b/src/features/Apiexplorer/Schema/Schema.module.scss
@@ -100,6 +100,19 @@
   }
 }
 
+.sourceButtonMain {
+  opacity: 0;
+  color: var(--ifm-color-secondary-darkest);
+  font-family: lucida console, Monaco, monospace;
+  padding: rem(0.2);
+  position: relative;
+  text-align: right;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: rem(2);
+  transition: opacity 0.2s ease-in-out;
+}
+
 .schemaBody {
   background-color: #282a35;
   padding: rem(2.8) rem(2.3);
@@ -109,10 +122,16 @@
     flex-direction: column;
     position: relative;
 
+    &:hover {
+      > .sourceButtonMain {
+        opacity: 1;
+      }
+    }
+
     .schemaBodyDescription + .schemaBodyDescription {
       text-indent: rem(1.6);
       padding: rem(1);
-      color: var(--ifm-color-white);
+      color: var(--ifm-color-emphasis-200);
       background-color: rgba(219, 219, 219, 0.05) !important;
       border-radius: 4px;
     }
@@ -186,7 +205,7 @@
     .schemaBodyDescription {
       display: inline-block;
       white-space: break-spaces;
-      color: var(--ifm-color-secondary-darkest);
+      color: var(--ifm-color-emphasis-200);
       margin-top: rem(1);
       font-size: rem(1.4);
       line-height: rem(2);
@@ -256,11 +275,23 @@
     .enumLabel {
       font-size: rem(1.4);
       line-height: rem(1.4);
-      color: var(--ifm-color-secondary-darkest);
+      color: var(--ifm-color-emphasis-200);
     }
 
     .enumType {
       font-size: rem(1.4);
+      &.string {
+        color: var(--schema-string);
+      }
+      &.array {
+        color: var(--schema-array);
+      }
+      &.integer {
+        color: var(--schema-integer);
+      }
+      &.number {
+        color: var(--schema-number);
+      }
     }
 
     .enumLabel,
@@ -286,6 +317,15 @@
   }
 }
 
-.schemaHeader:hover + .schemaBody .sourceButtonMain {
+.schemaHeader + .schemaBody > .sourceButtonMain {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.schemaHeader:hover + .schemaBody > .sourceButtonMain {
   opacity: 1;
 }
